<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="number_celsius" translatable="false">%d°C</string>
    <string name="feels_like">Feels like: %d°C</string>
    <string name="lang">en</string>
    <string name="kph">%d km/h</string>
    <string name="percent" translatable="false">%d%%</string>
    <string name="millibars">%d mmHg.</string>
    <string name="reload">Reload</string>
</resources>